# 40k-auspex

./: .gitignore  package-lock.json  package.json
.github/workflows/: deletePipeline.yml
api/: buildspec-build.yaml  package.json
api/authorizer/: Cargo.toml  buildspec-build.yaml  package.json  template.yaml
api/authorizer/rust_app/src/: main.rs  policy_builder.rs
api/authorizer/src/: main.rs  policy_builder.rs
api/test/get/: template.yaml
api/test/get/src/: main.rs
api/v1/: buildspec-build.yaml  package.json  template.yaml
api/v1/army/: package.json  template.yaml
api/v1/army/getAll/: template.yaml
api/v1/army/getAll/rust_app/: Cargo.toml
api/v1/army/get_all/: package.json  template.yaml
api/v1/army/get_all/rust_app/: Cargo.toml
api/v1/army/serialize/: package.json  template.yaml
api/v1/army/serialize/rust_app/: Cargo.toml
api/v1/army/serialize/rust_app/src/: main.rs
api/v1/army/serialize/rust_app/src/models/: request_model.rs
api/v1/army/serialize/rust_app/src/services/: data.rs  mod.rs  serialize.rs
api/v1/game/: package.json  template.yaml
api/v1/game/create/: package.json  template.yaml
api/v1/game/create/rust_app/: Cargo.toml
api/v1/game/create/rust_app/src/: main.rs
api/v1/game/create/rust_app/src/models/: game.rs  player.rs  request_model.rs
api/v1/game/create/rust_app/src/services/: create.rs  data.rs  map_to_game.rs  mod.rs  serialize.rs
api/v1/game/get/: package.json  template.yaml
api/v1/game/get-all/: template.yaml
api/v1/game/get/rust_app/: Cargo.toml
api/v1/game/get_all/: package.json  template.yaml
api/v1/game/update/: package.json  template.yaml
api/v1/test/get/: Cargo.toml  package.json  template.yaml
api/v2/: buildspec-build.yaml  template.yaml
api/v2/test/: package.json
api/v2/test/get/: package.json  template.yaml
infrastructure/: buildspec-build.yaml
infrastructure/apiGateway/infrastructure/: template.yaml
infrastructure/apiGatewayDeployment/infrastructure/: template.yaml
infrastructure/branchTrigger/: template.yaml
infrastructure/ciCd/createPipelineLambda/: package-lock.json  package.json  template.yaml
infrastructure/ciCd/createPipelineLambda/infrastructure/: template.yaml
infrastructure/ciCd/createPipelineLambda/src/: createFile.ts  index.ts
infrastructure/ciCd/deletePipelineLambda/: deploy.sh  package-lock.json  package.json  state-definition.json  template.yaml
infrastructure/ciCd/deletePipelineLambda/deleteStacks/: package-lock.json  package.json  template.yaml  tsconfig.json
infrastructure/ciCd/deletePipelineLambda/emptyBuckets/: package-lock.json  package.json  template.yaml
infrastructure/ciCd/deletePipelineLambda/getStacks/: package-lock.json  package.json  template.yaml
infrastructure/ciCd/deletePipelineLambda/infrastructure/: template.yaml
infrastructure/ciCd/deletePipelineLambda/src/: index.ts  lambda.ts  pipeline.ts
infrastructure/codeRepoBucket/: template.yaml
infrastructure/database/: package.json
infrastructure/database/infrastructure/: template.yaml
infrastructure/database/load-data/: package.json  template.yaml
infrastructure/database/load-data/rust_app/: Cargo.toml
infrastructure/database/load-data/rust_app/src/: main.rs  old_main.rs
infrastructure/database/load-data/rust_app/src/data/: grey_knights.json
infrastructure/database/load-data/rust_app/src/models/: army.rs  mod.rs  request.rs  response.rs  unit.rs
infrastructure/pipeline/: api-build.yaml  buildspec-build.yaml  endpoints-build.yaml  project-build.yaml  template.yaml
infrastructure/pipeline/buildspecs/: api-build.yaml  build.yaml  data-build.yaml  ui-build.yaml
infrastructure/roles/: template.yaml
infrastructure/uiBucket/: template.yaml
infrastructure/url/infrastructure/: template.yaml
processing/: package.json
processing/data/: grey_knights.json
processing/drop-files/: README.md  package.json  template.yaml
processing/drop-files/rust_app/: Cargo.toml
processing/drop-files/rust_app/src/: main.rs
processing/drop-files/rust_app/src/data/: grey_knights.json
processing/drop-files/rust_app/src/data/armies/: grey_knights.json
processing/drop-files/rust_app/src/enums/: restriction.rs
processing/drop-files/rust_app/src/models/: weapon.rs
processing/load-data/: README.md  package.json  template.yaml
processing/load-data/armies/: package.json  template.yaml
processing/load-data/armies/rust_app/: Cargo.toml
processing/load-data/rust_app/: Cargo.toml
processing/load-data/rust_app/src/: main.rs
services/: Cargo.toml
services/src/: lib.rs
services/src/business_logic/: army.rs  game.rs  map_to_game.rs  mod.rs  serialize.rs
services/src/data/: army.rs  game.rs  mod.rs
ui/: angular.json  package-lock.json  package.json  svelte.config.js
ui/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
ui/src/app/army/: army-routing.module.ts  army.module.ts  army.page.html  army.page.spec.ts  army.page.ts
ui/src/app/game/: game-routing.module.ts  game.page.html  game.page.ts
ui/src/app/home/: home.page.html  home.page.ts
ui/src/app/models/: game.ts  player.ts
ui/src/environments/: environment.prod.ts  environment.ts
ui/src/routes/: +layout.svelte
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/enums/: ability_type.rs  effect_type.rs  game_size.rs  mission_type.rs  mod.rs  restriction.rs  tag.rs  target.rs
utils/src/models/: ability.rs  army.rs  army_list.rs  composition.rs  detachment.rs  display_unit.rs  dynamo_result.rs  effect.rs  enhancment.rs  faction.rs  game.rs  mod.rs  object_with_id.rs  player.rs  rule.rs  unit.rs  weapon.rs
utils/src/services/: as_i32.rs  as_string.rs  as_string_vec.rs  as_vec.rs  mod.rs
utils/src/traits/: api_context.rs  mod.rs
utils/src/view_models/: game.rs  mod.rs  player.rs  request_model.rs
(+86 files in other folders)
