[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
envmnt = "0.10.4"
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.33.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde_dynamo = { version = "4.2.7", features = ["aws-sdk-dynamodb+0_33"] }
serde_json = "1.0.107"
serde = "1.0.189"
tracing = { version = "0.1", features = ["log"] }
utils = { path = "../utils" }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
regex = "1.10.3"
