[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = { version = "0.11.1", default-features = false, features = ["apigw"] }
lambda_runtime = "0.8.2"
serde = { version = "1.0.188", features = ["derive"] }
