[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
lambda_runtime = "0.7"
log = "0.4.19"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1"
simple_logger = "4.2.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
