[package]
name = "load-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
envmnt = "0.10.4"

lambda_runtime = "0.6.0"
serde = "1.0.136"
serde_json = "1.0.104"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
