[package]
name = "serialize"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
env_logger = "0.9.0"
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.33.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
http = "0.2.9"
aws_lambda_events = { version = "0.11.1", default-features = false, features = ["apigw"] }
lambda_runtime = "0.8.2"
envmnt = "0.10.4"
serde_json = "1.0.107"
serde = "1.0.189"
utils = { path = "../../../../../utils"}
serde_dynamo = { version = "4.2.7", features = ["aws-sdk-dynamodb+0_33"] }
regex = "1.10.2"
regex-split = "0.1.0"
